<resources>
    <string name="app_name">Azul Azul</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Preferencias</string>
    <string name="test_text">Test Text</string>
    <string name="title_activity_loader">Cargando . . .</string>
    <string name="loading_label">Cargando . . .</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_name">boton_prueba</string>
    <string name="team_label">EQUIPO</string>
    <string name="position_label">#</string>
    <string name="p_jugados_label">PJ</string>
    <string name="pganados_label">PG</string>
    <string name="pempatados_label">PE</string>
    <string name="pperdidos_label">PP</string>
    <string name="gfavor_label">GF</string>
    <string name="gcontra_label">GC</string>
    <string name="diferenciagol_label">DG</string>
    <string name="puntos_label">Pts</string>
    <string name="teamstitle_label">Equipos</string>
    <string name="dump">
[
    {
        version:1437683140,
        data:\"BEGIN TRANSACTION;
CREATE TABLE championships_championship (
  id int(11) NOT NULL ,
  name varchar(59) NOT NULL,
  logo varchar(200) NOT NULL,
  year int(11) NOT NULL,
  PRIMARY KEY (id)
);
INSERT INTO championships_championship VALUES (42,\'Apertura Colombia\',\'http://thumb.resfu.com/media/img/flags/44x27/co.png\',2015);
INSERT INTO championships_championship VALUES (50,\'Clausura Colombia\',\'http://thumb.resfu.com/media/img/flags/44x27/co.png\',2015);
INSERT INTO championships_championship VALUES (597,\'Apertura Colombia - Play Offs\',\'http://thumb.resfu.com/media/img/flags/44x27/co.png\',2015);
INSERT INTO championships_championship VALUES (846,\'Copa Colombia\',\'http://thumb.resfu.com/media/img/flags/44x27/co.png\',2015);
INSERT INTO championships_championship VALUES (1135,\'Primera B Colombia - Playoff Clausura\',\'http://thumb.resfu.com/media/img/flags/44x27/co.png\',2015);
INSERT INTO championships_championship VALUES (1489,\'Superliga de Colombia\',\'http://thumb.resfu.com/media/img/flags/44x27/co.png\',2015);
INSERT INTO championships_championship VALUES (1490,\'Cuadrangulares Ascenso - Colombia\',\'http://thumb.resfu.com/media/img/flags/44x27/co.png\',2015);
INSERT INTO championships_championship VALUES (1630,\'Primera B Colombia\',\'http://thumb.resfu.com/media/img/flags/44x27/co.png\',2015);
CREATE TABLE championships_championship_team (
  id int(11) NOT NULL ,
  championship_id int(11) NOT NULL,
  team_id int(11) NOT NULL,
  c_group int(11) NOT NULL,
  PRIMARY KEY (id)
  CONSTRAINT bae7af006f6dcff77ef20c81548d9998 FOREIGN KEY (championship_id) REFERENCES championships_championship (id),
  CONSTRAINT championships__team_id_6e6e7f684c347268_fk_championships_team_id FOREIGN KEY (team_id) REFERENCES championships_team (id)
);
INSERT INTO championships_championship_team VALUES (1,42,5,1);
INSERT INTO championships_championship_team VALUES (2,42,3,1);
INSERT INTO championships_championship_team VALUES (3,42,4,1);
CREATE TABLE championships_city (
  id int(11) NOT NULL ,
  name varchar(59) NOT NULL,
  PRIMARY KEY (id)
);
INSERT INTO championships_city VALUES (2,\'Bogota\');
INSERT INTO championships_city VALUES (5,\'cartagena\');
INSERT INTO championships_city VALUES (8,\'ciudad de prueba\');
INSERT INTO championships_city VALUES (9,\'ciudad de prueba\');
INSERT INTO championships_city VALUES (10,\'Barrancabermeja\');
CREATE TABLE championships_match (
  id int(11) NOT NULL ,
  match_date datetime NOT NULL,
  date_number int(11) NOT NULL,
  local_team_id int(11) NOT NULL,
  stadium_id int(11) NOT NULL,
  visitor_team_id int(11) NOT NULL,
  local_goals int(11) NOT NULL,
  visitor_goals int(11) NOT NULL,
  championship_id int(11) NOT NULL,
  played tinyint(1) NOT NULL,
  PRIMARY KEY (id)
  CONSTRAINT champion_local_team_id_2b6196acd4159104_fk_championships_team_id FOREIGN KEY (local_team_id) REFERENCES championships_team (id),
  CONSTRAINT champion_stadium_id_5330b18ac038417b_fk_championships_stadium_id FOREIGN KEY (stadium_id) REFERENCES championships_stadium (id),
  CONSTRAINT champi_visitor_team_id_566ee70f5adef619_fk_championships_team_id FOREIGN KEY (visitor_team_id) REFERENCES championships_team (id),
  CONSTRAINT D42d8d33d927f7036ba780b6a9992a88 FOREIGN KEY (championship_id) REFERENCES championships_championship (id)
);
INSERT INTO championships_match VALUES (2,\'2015-07-23 21:43:06\',1,3,1,5,3,3,42,1);
INSERT INTO championships_match VALUES (3,\'2015-08-07 22:09:06\',2,3,1,4,1,2,42,1);
CREATE TABLE championships_stadium (
  id int(11) NOT NULL ,
  name varchar(59) NOT NULL,
  capacity int(11) NOT NULL,
  city_id int(11) NOT NULL,
  PRIMARY KEY (id)
  CONSTRAINT championships__city_id_3f51b64b94ffb128_fk_championships_city_id FOREIGN KEY (city_id) REFERENCES championships_city (id)
);
INSERT INTO championships_stadium VALUES (1,\'Campin\',2500,2);
CREATE TABLE championships_team (
  id int(11) NOT NULL ,
  name varchar(59) NOT NULL,
  logo varchar(8) NOT NULL,
  city_id int(11) NOT NULL,
  short_name varchar(59) NOT NULL,
  PRIMARY KEY (id)
  CONSTRAINT championships__city_id_1dffc6e4e23b31d3_fk_championships_city_id FOREIGN KEY (city_id) REFERENCES championships_city (id)
);
INSERT INTO championships_team VALUES (3,\'Millonarios F. C\',\'f1.jpg\',2,\'shortName\');
INSERT INTO championships_team VALUES (4,\'Santa fe\',\'f2.jpg\',2,\'shortName\');
INSERT INTO championships_team VALUES (5,\'Alianza Petrolera\',\'f1.jpg\',10,\'shortName\');
CREATE INDEX championships_match_championships_match_aadf6262 ON championships_match (local_team_id);
CREATE INDEX championships_match_championships_match_5c1e67db ON championships_match (stadium_id);
CREATE INDEX championships_match_championships_match_0fc7cc15 ON championships_match (visitor_team_id);
CREATE INDEX championships_match_championships_match_1db20e2f ON championships_match (championship_id);
CREATE INDEX championships_championship_team_championships_championship_championship_id_5ddce2d3e999df95_uniq ON championships_championship_team (championship_id,team_id);
CREATE INDEX championships_championship_team_championships_championship_team_f6a7ca40 ON championships_championship_team (team_id);
CREATE INDEX championships_stadium_championships__city_id_3f51b64b94ffb128_fk_championships_city_id ON championships_stadium (city_id);
CREATE INDEX championships_team_championships__city_id_1dffc6e4e23b31d3_fk_championships_city_id ON championships_team (city_id);
END TRANSACTION;
\"
    }
]


</string>

</resources>
