<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/GridLayout1"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center_horizontal"
android:paddingTop="8dp"
android:paddingLeft="8dp"
android:paddingRight="8dp"
android:paddingBottom="8dp"
    android:stretchColumns="*"
tools:context="com.mugen.myteam.FragmentTabs.PosGridFragment"
    
android:background="@android:color/white">
<TableRow
    android:background="@color/deep_blue"
    style="@style/grid_row"
    android:divider="@drawable/abc_list_divider_mtrl_alpha">
    <TextView android:text="@string/position_label" android:layout_column="0" android:layout_row="0" style="@style/gridheader_text"/>
    <TextView android:text="@string/team_label" style="@style/gridheader_text" />
    <TextView android:text="@string/p_jugados_label" style="@style/gridheader_text"/>
    <TextView android:text="@string/pganados_label" style="@style/gridheader_text"/>
    <TextView android:text="PE" style="@style/gridheader_text"/>
    <TextView android:text="PP" style="@style/gridheader_text"/>
    <TextView android:text="GF" style="@style/gridheader_text"/>
    <TextView android:text="GC" style="@style/gridheader_text"/>
    <TextView android:text="DG" style="@style/gridheader_text"/>
    <TextView android:text="Pts" style="@style/gridheader_text" />
</TableRow>
<TableRow
    style="@style/grid_row">
    <TextView android:text="PJ" android:layout_column="0" android:layout_row="1" style="@style/grid_text" />
    <TextView android:text="Millonarios" android:layout_column="1" android:layout_row="1" style="@style/grid_text"/>
    <TextView android:text="0" android:layout_column="2" android:layout_row="1" style="@style/grid_text" />
    <TextView android:text="333" android:layout_column="3" android:layout_row="1" style="@style/grid_text"/>
    <TextView android:text="PP" android:layout_column="4" android:layout_row="1" style="@style/grid_text"/>
    <TextView android:text="GF" android:layout_column="5" android:layout_row="1" style="@style/grid_text"/>
    <TextView android:text="GC" android:layout_column="6" android:layout_row="1" style="@style/grid_text"/>
    <TextView android:text="DG" android:layout_column="7" android:layout_row="1" style="@style/grid_text"/>
    <TextView android:text="Pts" android:layout_column="8" android:layout_row="1" style="@style/grid_text" />
</TableRow>
</TableLayout>